src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ATH__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Athletics Ticket ID</inlineHelpText>
        <label>ATH</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Value_of_Estate__c</fullName>
        <label>Actual Value of Estate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Alternate_Names__c</fullName>
        <description>S-342621</description>
        <inlineHelpText>Other known names for this Account.</inlineHelpText>
        <label>Alternate Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bequest_Type__c</fullName>
        <label>Bequest Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contingent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contingent Residual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-monetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Plans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residuary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unbooked Trust</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased_Day__c</fullName>
        <description>Manually populated, this field indicates the Day the Contact was deceased.</description>
        <inlineHelpText>Day the Contact was deceased.</inlineHelpText>
        <label>Deceased Day</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased_Month__c</fullName>
        <description>Manually populated, this field indicates the Month the Contact was deceased.</description>
        <inlineHelpText>Month the Contact was deceased.</inlineHelpText>
        <label>Deceased Month</label>
        <picklist>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deceased_Year__c</fullName>
        <description>Manually populated, this field indicates the Year the Contact was deceased.</description>
        <inlineHelpText>Year the Contact was deceased.</inlineHelpText>
        <label>Deceased Year</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Encoded ID</inlineHelpText>
        <label>EID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Date_for_Principal_Distribution__c</fullName>
        <label>Est Date for Principal Distribution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Value_of_Bequest__c</fullName>
        <label>Estimated Value of Bequest</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foreign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Hierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-Only field set to True if the Account has a Parent or a Child record</description>
        <label>Has Hierarchy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Comments__c</fullName>
        <description>Field used to capture Account Hierarchy details.</description>
        <label>Hierarchy Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <description>S-342637</description>
        <inlineHelpText>Account&apos;s relationship to the Parent Account</inlineHelpText>
        <label>Hierarchy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merged Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Input_Method__c</fullName>
        <label>Input Method</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Institution_Code__c</fullName>
        <inlineHelpText>Peoplesoft Institution Code</inlineHelpText>
        <label>Institution Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Indicates the priority level of an Estate</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SUID_Pool_Value__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <label>SUID Pool Value</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SUID__c</fullName>
        <label>SUID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Secondary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Secondary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Name__c</fullName>
        <label>Sort Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specific_Bequest_Amount__c</fullName>
        <label>Specific Bequest Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Summary_of_Bequest__c</fullName>
        <label>Summary of Bequest Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Bios__About_Us__c</fullName>
        <description>Manually populated field used to describe the Account.</description>
        <inlineHelpText>Area for general information about the Account.</inlineHelpText>
        <label>About Us</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Date__c</fullName>
        <description>Manually populated date indicating when the Account was acquired.</description>
        <inlineHelpText>Date indicating when the Account was acquired.</inlineHelpText>
        <label>Acquired Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Acquired_Source__c</fullName>
        <description>Manually populated field indicating the Channel used to acquire this Account.</description>
        <inlineHelpText>Channel used to acquire this Account.</inlineHelpText>
        <label>Acquired Source</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Manually populated field indicating is this account active?</description>
        <inlineHelpText>Is this account active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Age_for_Preference_Rule_Engine__c</fullName>
        <description>Autocalculates number of days from account created date until today. This value will be used in preference rule engine.</description>
        <formula>MAX(0,  NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autocalculates number of days from account created date until today.</inlineHelpText>
        <label>Age for Preference Rule Engine</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Account acting as the Agency for this Account.</description>
        <inlineHelpText>Link to the Account acting as the Agency for this Account.</inlineHelpText>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value does not exist or does not match filter criteria. The Account selected must be an Organizational Account.</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Organizational</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency Client Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Archive_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</description>
        <inlineHelpText>Identifies a record to be archived in roundData and removed from Salesforce. It will reside in roundData for storage and query runs.</inlineHelpText>
        <label>Archive?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Category__c</fullName>
        <description>Manually populated field indicating the type of Organization.</description>
        <inlineHelpText>Indicates the type of Organization.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foundation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Household</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Profit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__External_ID__c</fullName>
        <description>Field used by the Batch Upload Matching process. The field is not External or Unique in Salesforce terms.</description>
        <inlineHelpText>Field used by the Batch Upload Matching process. The field is not External or Unique in Salesforce terms.</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Funding_Area__c</fullName>
        <description>Funding focus area for organization.</description>
        <inlineHelpText>Funding focus area for organization.</inlineHelpText>
        <label>Funding Area</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poverty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wildlife</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Billing is checked on the Account Address record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Address object) when Preferred Billing is checked on the Account Address record.</inlineHelpText>
        <label>Preferred Billing Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Billing Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Billing_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Demographic_Profile__c</fullName>
        <description>Formula Field providing gender, age range and ethnicity of Preferred Contact.</description>
        <formula>BLANKVALUE(rC_Bios__Preferred_Contact__r.rC_Bios__Demographic_Profile__c, &apos;Unknown&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Gender, age range and ethnicity of Preferred Contact	.</inlineHelpText>
        <label>Preferred Contact Demographic Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Email__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Email.</description>
        <formula>rC_Bios__Preferred_Contact__r.Email</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Email.</inlineHelpText>
        <label>Preferred Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact_Phone__c</fullName>
        <description>Formula field indicating the Preferred Contact&apos;s Preferred Phone #.</description>
        <formula>rC_Bios__Preferred_Contact__r.Phone</formula>
        <inlineHelpText>Indicates the Preferred Contact&apos;s Preferred Phone #.</inlineHelpText>
        <label>Preferred Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to Contact) when Preferred Contact is checked on the Contact record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Contact object) when Preferred Contact is checked on the Contact record.</inlineHelpText>
        <label>Preferred Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Preferred Contact)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Preferred_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to AddressId) when Preferred Shipping is checked on the Account_ManageContacts VF page.</description>
        <inlineHelpText>Indicates the preferred shipping address.</inlineHelpText>
        <label>Preferred Shipping Address</label>
        <referenceTo>rC_Bios__Address__c</referenceTo>
        <relationshipLabel>Accounts (Preferred Shipping Address)</relationshipLabel>
        <relationshipName>Accounts_Preferred_Shipping_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Primary_Constituent_Type__c</fullName>
        <description>Subcategory of primary Constituency type rolls up to this field.</description>
        <inlineHelpText>Subcategory of primary Constituency type rolls up to this field.</inlineHelpText>
        <label>Primary Constituent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Recover_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in conjunction with roundData to recover all data associated with account. If this is set to True, roundData will push all archived data (any archive enabled object) back into roundCause within a few hours, the assumption being that these records do not meet current archival settings.</description>
        <inlineHelpText>Set to &quot;True&quot; to recover all archived data for this account.</inlineHelpText>
        <label>Recover?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Addresses__c</fullName>
        <description>Automatically populated via auto rollup, this field contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</description>
        <inlineHelpText>Contains the greatest (most recent) Last Modified Date out of all the Account Addresses on the Account.</inlineHelpText>
        <label>Rollup Addresses</label>
        <summarizedField>rC_Bios__Account_Address__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>rC_Bios__Account_Address__c.rC_Bios__Account__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Rollup_Primary_Constituent_Preference__c</fullName>
        <description>Indicates the date and time when Primary Constituent Type roll-up from Constituent Type Preference record.</description>
        <inlineHelpText>Date/time when last Primary Constituent Type Preference updated.</inlineHelpText>
        <label>Rollup Primary Constituent Preference</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Salutation__c</fullName>
        <description>Salutation created by Preferred and Secondary Contact Name aggregation or by Preferred Salutation.</description>
        <inlineHelpText>Primary Salutation for the Account.</inlineHelpText>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Automatically populated via trigger (Lookup to Contact) when Secondary Contact is checked on the Contact record.</description>
        <inlineHelpText>Automatically populated via trigger (Lookup to Contact) when Secondary Contact is checked on the Contact record.</inlineHelpText>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Secondary Contact)</relationshipLabel>
        <relationshipName>Accounts_Secondary_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Bios__Warning_Comments__c</fullName>
        <description>Critical alerts or information that needs high visibility.</description>
        <inlineHelpText>Critical alerts or information that needs high visibility.</inlineHelpText>
        <label>Warning Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rC_Education__Days_In_Stage__c</fullName>
        <description>Number of days Account in this stage</description>
        <formula>IF(ISNULL( rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c ),
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; TODAY()),0,TODAY()- rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c), 
IF(OR(ISNULL(rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c),rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c &gt; rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c),0,rC_Education__Stage_History__r.rC_Education__Stage_End_Date__c - rC_Education__Stage_History__r.rC_Education__Stage_Start_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of days in this stage.</inlineHelpText>
        <label>Days In Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Education__Stage_History__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to stage history object to access stage</description>
        <inlineHelpText>Lookup to stage history object</inlineHelpText>
        <label>Stage History</label>
        <referenceTo>rC_Education__Stage_History__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rC_Education__Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Collected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncollectible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cultivation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verbal Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Written Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Proposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Id. Decision Makers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perception Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal/Price Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation/Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Won</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Lost</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Active_Sustainer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates the  Account has an active Sustaining gift.</description>
        <inlineHelpText>When checked, indicates the Account has an active Sustaining gift.</inlineHelpText>
        <label>Active Sustainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Giving Amount fields from all Hard Credit enabled Gifts within Current Calendar Year tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Current Calendar Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Calendar_Year_Hard_Credit_Count__c</fullName>
        <description>Total count of Current Givings from all Hard Credit enabled Gifts within Current Calendar Year. This field is tied to Org wide Primary Affiliation.Check Track Hard Credits? field on Account to enable Rollup.</description>
        <label>Current Calendar Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Amount__c</fullName>
        <description>Sum of Current Amount field across all most recent active Summaries (one per record type) tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Dollar value of gifts on Account where Hard Credits were received for the current member year.</inlineHelpText>
        <label>Current Year Hard Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Hard_Credit_Count__c</fullName>
        <description>Total count of Opportunities directly related to all most recent active Summaries (one per record type) tied to Org wide Primary Affiliation. Check Track Hard Credits? field on Account to enable Rollup.</description>
        <inlineHelpText>Number of gifts on Account where Hard Credits were received for the current member year.</inlineHelpText>
        <label>Current Year Hard Credit Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Is_Major_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked indicates Major Giver flag on most recent active membership summary set to true.</description>
        <inlineHelpText>Account has a Major Gift for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Major Giver?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Current_Year_Is_Sustaining_Giver__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Account is a current Sustaining Giver. This field is automatically checked when a sustaining gift comes in and will not be automatically unchecked until the next calendar year begins.</description>
        <inlineHelpText>Account has a Sustaining Gift for the current calendar year starting January 1.</inlineHelpText>
        <label>Current Year Sustaining Giver?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>